--- a/home/dot_config/eww/dashboard/eww.yuck.tmpl
+++ b/home/dot_config/eww/dashboard/eww.yuck.tmpl
@@ -5,54 +5,6 @@
 ;; ** Last updated by : @ulises-jeremias
 ;; **
 
-;; ** Variables ***********************************************************************
-
-;; Profile vars
-(defvar IMAGE "images/profile.jpeg")
-(defvar NAME "{{- .profile.user.name -}}")
-(defpoll UNAME :interval "5m" `whoami`)
-
-;; System vars
-(defpoll HOST :interval "5s" `hostname`)
-(defpoll CPU_USAGE :interval "1s" `scripts/sys-info --cpu`)
-(defpoll MEM_USAGE :interval "1s" `scripts/sys-info --mem`)
-(defpoll BLIGHT :interval "1s" `scripts/sys-info --blight`)
-(defpoll BATTERY :interval "5s" `scripts/sys-info --bat`)
-
-;; Time vars
-(defpoll HOUR :interval "5s" `date +\"%I\"`)
-(defpoll MIN :interval "5s" `date +\"%M\"`)
-(defpoll MER :interval "5s" `date +\"%p\"`)
-(defpoll DAY :interval "5s" `date +\"%A\"`)
-
-;; Uptime vars
-(defpoll UPHOUR :interval "5s" `uptime -p | awk '{print $2 \" \" $3}' | sed 's/,//g'`)
-(defpoll UPMIN :interval "5s" `uptime -p | awk '{print $4 \" \" $5}' | sed 's/,//g'`)
-
-;; Music vars
-(defpoll SONG :interval "1s" `scripts/music-info --song`)
-(defpoll ARTIST :interval "1s" `scripts/music-info --artist`)
-(defpoll STATUS :interval "1s" `scripts/music-info --status`)
-(defpoll CURRENT :interval "1s" `scripts/music-info --time`)
-(defpoll COVER :interval "1s" `scripts/music-info --cover`)
-(defpoll CTIME :interval "1s" `scripts/music-info --ctime`)
-(defpoll TTIME :interval "1s" `scripts/music-info --ttime`)
-
-;; Weather vars
-(defpoll ICON :interval "15m" `~/.local/bin/dots-weather-info --icon`)
-(defpoll STAT :interval "15m" `~/.local/bin/dots-weather-info --stat`)
-(defpoll TEMP :interval "15m" `~/.local/bin/dots-weather-info --temp`)
-(defpoll HEX :interval "15m" `~/.local/bin/dots-weather-info --hex`)
-(defpoll QUOTE :interval "15m" `~/.local/bin/dots-weather-info --quote`)
-(defpoll QUOTE2 :interval "15m" `~/.local/bin/dots-weather-info --quote2`)
-
-;; Apps vars
-(defpoll MAILS :interval "5m" `scripts/mails`)
-
-;; Files vars
-(defpoll FREE :interval "5s" `df -h / | awk '{print $4}' | tail -n 1 | sed 's/G/GB/'`)
-
-
 ;; ** Widgets *************************************************************************
 
 
@@ -73,16 +25,16 @@
 	(box :class "genwin" :vexpand "false" :hexpand "false"
 		(box :orientation "v" :spacing 35 :halign "center" :valign "center" :space-evenly "false" :vexpand "false" :hexpand "false"
 			(box :class "cpu_bar" :orientation "h" :spacing 20 :space-evenly "false" :vexpand "false" :hexpand "false"
-				(label :class "iconcpu" :text "")
+				(label :class "iconcpu" :text "")
 				(scale :min 0 :max 100 :value CPU_USAGE :active "false"))
 			(box :class "mem_bar" :orientation "h" :spacing 20 :space-evenly "false" :vexpand "false" :hexpand "false"
-				(label :class "iconmem" :text "")
+				(label :class "iconmem" :text "")
 				(scale :min 0 :max 100 :value MEM_USAGE :active "false"))
 			(box :class "bright_bar" :orientation "h" :spacing 20 :space-evenly "false" :vexpand "false" :hexpand "false"
-				(label :class "iconbright" :text "")
+				(label :class "iconbright" :text "")
 				(scale :min 0 :max 100 :value BLIGHT :active "false"))
 			(box :class "bat_bar" :orientation "h" :spacing 20 :space-evenly "false" :vexpand "false" :hexpand "false"
-				(label :class "iconbat" :text "")
+				(label :class "iconbat" :text "")
 				(scale :min 0 :max 100 :value BATTERY :active "false")))))
 
 ;; clock
@@ -99,7 +51,7 @@
 (defwidget uptime []
 	(box :class "genwin"
 		(box :orientation "h" :halign "center" :spacing 40 :space-evenly "false" :vexpand "false" :hexpand "false"
-			(label :class "icontimer" :valign "center" :text "祥")
+			(label :class "icontimer" :valign "center" :text "󰅐")
 			(box :orientation "v" :valign "center" :spacing 0 :space-evenly "false" :vexpand "false" :hexpand "false"
 				(label :class "uphour" :halign "start" :wrap "true" :limit-width 25 :text UPHOUR)
 				(label :class "upmin" :halign "start" :wrap "true" :limit-width 25 :text UPMIN)))))
@@ -112,27 +64,27 @@
 			(label :halign "center" :class "song" :wrap "true" :limit-width 20 :text SONG)
 			(label :halign "center" :class "artist" :wrap "true" :limit-width 15 :text ARTIST)
 			(box :orientation "h" :spacing 20 :halign "center" :space-evenly "true" :vexpand "false" :hexpand "false"
-				(button :class "btn_prev" :onclick "scripts/music-info --prev" "玲")
+				(button :class "btn_prev" :onclick "scripts/music-info --prev" "󰒮")
 				(button :class "btn_play" :onclick "scripts/music-info --toggle" STATUS)
-				(button :class "btn_next" :onclick "scripts/music-info --next" "怜"))
+				(button :class "btn_next" :onclick "scripts/music-info --next" "󰒭"))
 			(box :class "music_bar" :halign "center" :vexpand "false" :hexpand "false"
 				(scale :onscroll "mpc -q seek +1" :min 0 :active "true" :max 100 :value CURRENT)))))
 
 ;; github
 (defwidget github []
 	(box :class "github" :vexpand "false" :hexpand "false"
-		(button :class "iconweb" :onclick "~/.config/eww/dashboard/launch.sh; exo-open https://github.com" "")))
+		(button :class "iconweb" :onclick "~/.config/eww/dashboard/launch.sh; exo-open https://github.com" "󰊤")))
 
 ;; youtube
 (defwidget youtube []
 	(box :class "youtube" :vexpand "false" :hexpand "false"
-		(button :class "iconweb" :onclick "~/.config/eww/dashboard/launch.sh; exo-open https://youtube.com" "")))
+		(button :class "iconweb" :onclick "~/.config/eww/dashboard/launch.sh; exo-open https://youtube.com" "󰗃")))
 
 ;; mail
 (defwidget mail []
 	(box :class "mail"
 		(box :orientation "h" :halign "center" :spacing 20 :space-evenly "false" :vexpand "false" :hexpand "false"
-			(button :class "iconmail" :onclick "~/.config/eww/dashboard/launch.sh; exo-open https://mail.google.com" "")
+			(button :class "iconmail" :onclick "~/.config/eww/dashboard/launch.sh; exo-open https://mail.google.com" "󰊫")
 			(box :class "mailbox" :space-evenly "false" :vexpand "false" :hexpand "false"
 				(button :class "label_mails" :onclick "~/.config/eww/dashboard/launch.sh; exo-open https://mail.google.com" MAILS)))))
 
@@ -151,46 +103,46 @@
 ;; power buttons
 (defwidget lock []
 	(box :class "genwin" :vexpand "false" :hexpand "false"
-		(button :class "btn_lock" :onclick "~/.config/eww/dashboard/launch.sh; betterlockscreen --lock" "󰌾")))
+		(button :class "btn_lock" :onclick "~/.config/eww/dashboard/launch.sh; betterlockscreen --lock" "")))
 (defwidget logout []
 	(box :class "genwin" :vexpand "false" :hexpand "false"
-		(button :class "btn_logout" :onclick "~/.config/eww/dashboard/launch.sh; loginctl terminate-session" "")))
+		(button :class "btn_logout" :onclick "~/.config/eww/dashboard/launch.sh; loginctl terminate-session" "󰗽")))
 (defwidget sleep []
 	(box :class "genwin" :vexpand "false" :hexpand "false"
-		(button :class "btn_sleep" :onclick "~/.config/eww/dashboard/launch.sh; systemctl suspend" "")))
+		(button :class "btn_sleep" :onclick "~/.config/eww/dashboard/launch.sh; systemctl suspend" "")))
 (defwidget reboot []
 	(box :class "genwin" :vexpand "false" :hexpand "false"
-		(button :class "btn_reboot" :onclick "systemctl -i reboot" "")))
+		(button :class "btn_reboot" :onclick "systemctl -i reboot" "")))
 (defwidget poweroff []
 	(box :class "genwin" :vexpand "false" :hexpand "false"
-		(button :class "btn_poweroff" :onclick "systemctl -i poweroff" "")))
+		(button :class "btn_poweroff" :onclick "systemctl -i poweroff" "󰐥")))
 
 ;; folders
 (defwidget folders []
 	(box :class "genwin" :orientation "v" :space-evenly "false" :vexpand "false" :hexpand "false"
 		(box :class "hddbox" :orientation "h" :space-evenly "false" :vexpand "false" :hexpand "false"
 			(box :space-evenly "false" :vexpand "false" :hexpand "false"
-				(button :class "hddicon" :onclick "thunar &" "")
+				(button :class "hddicon" :onclick "~/.config/eww/dashboard/launch.sh; exo-open --launch FileManager" "")
 				(label :class "fs_sep" :text "|"))
 			(box :space-evenly "false" :vexpand "false" :hexpand "false"
 				(label :class "hdd_label" :wrap "true" :limit-width 25 :text FREE)))
 		(box :orientation "h" :space-evenly "false" :vexpand "false" :hexpand "false"
-			(button :class "iconfolder1" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Documents" "")
+			(button :class "iconfolder1" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Documents" "󱧶")
 			(button :class "label_folder1" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Documents" "Documents"))
 		(box :orientation "h" :space-evenly "false" :vexpand "false" :hexpand "false"
-			(button :class "iconfolder2" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Downloads" "")
+			(button :class "iconfolder2" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Downloads" "󰉍")
 			(button :class "label_folder2" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Downloads" "Downloads"))
 		(box :orientation "h" :space-evenly "false" :vexpand "false" :hexpand "false"
-			(button :class "iconfolder3" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Music" "")
+			(button :class "iconfolder3" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Music" "󱍙")
 			(button :class "label_folder3" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Music" "Music"))
 		(box :orientation "h" :space-evenly "false" :vexpand "false" :hexpand "false"
-			(button :class "iconfolder4" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Pictures" "")
+			(button :class "iconfolder4" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Pictures" "󰉏")
 			(button :class "label_folder4" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/Pictures" "Pictures"))
 		(box :orientation "h" :space-evenly "false" :vexpand "false" :hexpand "false"
-			(button :class "iconfolder5" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/.config" "ﮛ")
+			(button :class "iconfolder5" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/.config" "󱁿")
 			(button :class "label_folder5" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/.config" "~/.config"))
 		(box :orientation "h" :space-evenly "false" :vexpand "false" :hexpand "false"
-			(button :class "iconfolder6" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/.local" "ﮛ")
+			(button :class "iconfolder6" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/.local" "󰚝")
 			(button :class "label_folder6" :onclick "~/.config/eww/dashboard/launch.sh; exo-open ~/.local" "~/.local"))))
 
 ;; placeholder items
