chore: Update dependencies and install new packages
Update the chezmoiscripts to include new dependencies and install additional packages. This includes adding python, python-pip, python-pipx, and numix-circle-icon-theme to the pacman package list. It also installs xarchiver and its dependencies, and sassc for the wpgtk package. Finally, it updates the shell-gpt installation command to use pipx instead of pip3.

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -12,6 +12,9 @@ set -eufo pipefail
   "jq"
   "neofetch"
   "pacman-contrib"
+  "python"
+  "python-pip"
+  "python-pipx"
   "shellcheck"
 -}}
 
@@ -39,6 +42,7 @@ set -eufo pipefail
   "arc-dark-osx-openbox-theme-git"
   "betterlockscreen"
   "numix-icon-theme"
+  "numix-circle-icon-theme"
   "visual-studio-code-bin"
   "skippy-xd"
 ) -}}
