--- a/home/.chezmoiscripts/linux/run_onchange_before_install-shellgpt.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-shellgpt.sh.tmpl
@@ -19,7 +19,7 @@ ibus restart
 # Pull the Mistral model
 ollama pull mistral:7b-instruct
 
-pip3 install --user --upgrade shell-gpt[litellm]
+pipx install shell-gpt[litellm]
 {{      end -}}
 
 {{ end -}}
