--- a/home/.chezmoiscripts/linux/run_onchange_before_install-thunar.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-thunar.sh.tmpl
@@ -7,7 +7,29 @@ yay -S --noconfirm --needed \
   thunar \
   thunar-archive-plugin \
   thunar-media-tags-plugin \
-  thunar-volman
+  thunar-volman \
+  xarchiver
+
+# install xarchiver and its dependencies
+yay -S --noconfirm --needed \
+  xarchiver \
+  arj \
+  binutils \
+  bzip2 \
+  cpio \
+  lha \
+  lrzip \
+  lz4 \
+  lzop \
+  p7zip \
+  tar \
+  unarj \
+  unrar \
+  unzip \
+  xdg-utils \
+  xz \
+  zip \
+  zstd
 {{      end -}}
 
 {{ end -}}
