chore: Update numix-circle-icon-theme to numix-circle-icon-theme-git

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -41,8 +41,7 @@ set -eufo pipefail
 {{ $aurPackages = concat $aurPackages (list
   "arc-dark-osx-openbox-theme-git"
   "betterlockscreen"
-  "numix-icon-theme"
-  "numix-circle-icon-theme"
+  "numix-circle-icon-theme-git"
   "visual-studio-code-bin"
   "skippy-xd"
 ) -}}
