chore: Update dependencies and install new packages

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-000-aur-helper.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-000-aur-helper.sh.tmpl
@@ -4,8 +4,8 @@
 #!/usr/bin/env bash
 
 sudo pacman -Syy --needed git base-devel
-git clone https://aur.archlinux.org/yay.git
-cd yay || exit 1
+git clone https://aur.archlinux.org/yay.git /tmp/yay
+cd /tmp/yay
 makepkg -si
 {{      end -}}
 
