--- a/home/.chezmoiscripts/linux/run_onchange_before_install-i3.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-i3.sh.tmpl
@@ -7,14 +7,14 @@ yay -S --noconfirm --needed \
   i3-wm
 
 # Install i3-layouts from PyPI
-pip3 install --user --upgrade i3-layouts
+pipx install i3-layouts
 
 # Install i3-resurrect from PyPI
-pip3 install --user --upgrade i3-resurrect
+pipx install i3-resurrect
 
 # Install i3bgwin from source
-git clone https://github.com/quantum5/i3bgwin
-cd i3bgwin
+git clone https://github.com/quantum5/i3bgwin /tmp/i3bgwin
+cd /tmp/i3bgwin
 make
 sudo cp i3bgwin /usr/local/bin
 sudo chmod +x /usr/local/bin/i3bgwin
