--- a/home/.chezmoiscripts/linux/run_onchange_before_install-ibus.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-ibus.sh.tmpl
@@ -4,16 +4,12 @@
 #!/usr/bin/env bash
 
 sudo pacman -S --noconfirm --needed \
-  ollama
+  ibus
 
 yay -S --noconfirm --needed \
-  litellm
+  ibus-autostart \
+  shin-git
 
-sudo systemctl enable --now ollama
-
-ollama pull llama3.1
-
-pipx install shell-gpt[litellm]
 {{      end -}}
 
 {{ end -}}
