chore: Update dependencies and install new packages

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -42,6 +42,7 @@ set -eufo pipefail
   "arc-dark-osx-openbox-theme-git"
   "betterlockscreen"
   "numix-circle-icon-theme-git"
+  "pamac-aur"
   "visual-studio-code-bin"
   "skippy-xd"
 ) -}}
