--- a/home/.chezmoiscripts/linux/run_onchange_before_install-bluetooth.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-bluetooth.sh.tmpl
@@ -4,9 +4,11 @@
 #!/usr/bin/env bash
 
 sudo pacman -S --noconfirm --needed \
-  bluez \
   blueman \
-  bluez-tools
+  bluez \
+  bluez-tools \
+  bluez-utils \
+  pulseaudio-bluetooth
 {{      end -}}
 
 {{ end -}}
