feat: Add ibus restart if it's running
This commit adds the functionality to restart ibus if it's already running. It checks if the ibus-daemon process is running using the `pgrep` command, and if it is, it restarts ibus using the `ibus restart` command. This improves the user experience by ensuring that ibus is always in a consistent state.

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-ibus.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-ibus.sh.tmpl
@@ -7,8 +7,15 @@ sudo pacman -S --noconfirm --needed \
   ibus
 
 yay -S --noconfirm --needed \
-  ibus-autostart \
-  shin-git
+  ibus-autostart
+
+git clone https://github.com/apockill/shin.git --single-branch --depth 1 --branch feature/arbitrary-commands /tmp/shin
+cd /tmp/shin
+make
+sudo make install
+
+# Run ibus restart if it's running
+pgrep ibus-daemon && ibus restart
 
 {{      end -}}
 
