feat: Add gvfs package for Thunar file manager
This commit adds the `gvfs` package to the pacman package list in the `run_onchange_before_install-thunar.sh.tmpl` script. The `gvfs` package provides support for virtual file systems in Thunar, allowing users to access remote files and devices seamlessly. This enhancement improves the functionality and usability of Thunar as a file manager.

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-thunar.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-thunar.sh.tmpl
@@ -3,6 +3,9 @@
 {{      if eq .osid "linux-arch" -}}
 #!/usr/bin/env bash
 
+sudo pacman -S --noconfirm --needed \
+  gvfs
+
 yay -S --noconfirm --needed \
   thunar \
   thunar-archive-plugin \
@@ -17,7 +20,6 @@ yay -S --noconfirm --needed \
   binutils \
   bzip2 \
   cpio \
-  gvfs \
   lha \
   lrzip \
   lz4 \
