fix: Update GitHub icon in polybar configuration for improved visibility

--- a/home/dot_config/polybar/modules/github.conf.tmpl
+++ b/home/dot_config/polybar/modules/github.conf.tmpl
@@ -26,7 +26,7 @@ format = <label>
 ; Available tokens:
 ;   %notifications% (default)
 ; Default: Notifications: %notifications%
-label = %{T4}%{T-} %notifications%
+label = %{T4}󰊤%{T-} %notifications%
 label-foreground = ${xrdb:color7}
 
 ; Used when GitHub can't be reached
@@ -37,5 +37,5 @@ format-offline = <label-offline>
 ; Available tokens:
 ;   None
 ; Default: Offline
-label-offline = %{T4}%{T-} -
+label-offline = %{T4}󰊤%{T-} -
 label-offline-foreground = ${xrdb:color7}
