fix(scripts): replace pulseaudio with pipewire-pulse and remove unnecessary package

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-bluetooth.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-bluetooth.sh.tmpl
@@ -7,8 +7,7 @@ sudo pacman -S --noconfirm --needed \
   blueman \
   bluez \
   bluez-tools \
-  bluez-utils \
-  pulseaudio-bluetooth
+  bluez-utils
 {{      end -}}
 
 {{ end -}}
