feat(xfce): add configuration files for xfce4-session, thunar-volman, xfce4-screensaver, and xfce4-mime-settings feat(docs): add PipeWire volume module documentation and images

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -29,7 +29,6 @@ set -eufo pipefail
   "flameshot"
   "graphicsmagick"
   "pamixer"
-  "pavucontrol"
   "playerctl"
   "pipewire-pulse"
   "sxiv"
@@ -43,6 +42,7 @@ set -eufo pipefail
   "betterlockscreen"
   "numix-circle-icon-theme-git"
   "pamac-aur"
+  "pwvucontrol"
   "visual-studio-code-bin"
   "skippy-xd"
 ) -}}
