feat(ibus): add check before restarting ibus daemon

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-ibus.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-ibus.sh.tmpl
@@ -15,7 +15,9 @@ make
 sudo make install
 
 # Run ibus restart if it's running
-pgrep ibus-daemon && ibus restart
+if pgrep -x ibus-daemon > /dev/null; then
+  ibus restart
+fi
 
 {{      end -}}
 
