feat(install): update audio software installation script to include Reaper

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-studio.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-studio.sh.tmpl
@@ -4,9 +4,9 @@
 #!/usr/bin/env bash
 
 sudo pacman -S --noconfirm --needed \
-  ardour \
   guitarix \
-  gxplugins.lv2
+  gxplugins.lv2 \
+  reaper
 
 {{      end -}}
 
