feat: update sddm theme installation to use aerial-git package

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-sddm-with-theme.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-sddm-with-theme.sh.tmpl
@@ -9,7 +9,7 @@ sudo pacman -S --noconfirm --needed \
 sudo systemctl enable --now sddm
 
 yay -S --noconfirm --needed \
-  sddm-theme-aerial
+  sddm-theme-aerial-git
 
 # Create a backup of the original sddm.conf file
 [ -f /etc/sddm.conf ] && sudo mv /etc/sddm.conf /etc/sddm.conf.bak
