--- a/home/dot_config/eww/powermenu/eww.scss
+++ b/home/dot_config/eww/powermenu/eww.scss
@@ -1,4 +1,5 @@
-@import "colors.scss";
+@import "colors.scss";        // Base pywal colors
+@import "smart-colors.scss";  // Smart semantic colors
 
 /** Global *******************************************/
 * {
