--- a/home/dot_config/polybar/configs/default/modules/github.conf.tmpl
+++ b/home/dot_config/polybar/configs/default/modules/github.conf.tmpl
@@ -27,7 +27,7 @@ format = <label>
 ;   %notifications% (default)
 ; Default: Notifications: %notifications%
 label = %{T4}󰊤%{T-} %notifications%
-label-foreground = ${colors.info}
+label-foreground = ${colors.foreground-alt}
 
 ; Used when GitHub can't be reached
 ; Available tags:
