--- a/home/dot_config/eww/dashboard/eww.scss
+++ b/home/dot_config/eww/dashboard/eww.scss
@@ -11,13 +11,14 @@
 .bg {
   background-image: url($wallpaper);
   background-color: lighten($background, 10%);
-  opacity: 1;
+  opacity: 1.0;
 }
 
 /** Generic window ***********************************/
 .genwin {
-  background-color: lighten($background, 10%);
-  border-radius: 16px;
+  background-color: lighten($background, 12%);
+  border-radius: 24px;
+  padding: 4px;
 }
 
 /** Profile ******************************************/
@@ -26,7 +27,8 @@
   min-height: 200px;
   min-width: 200px;
   margin: 65px 0px 0px 0px;
-  border-radius: 100%;
+  border-radius: 50%;
+  border: 4px solid lighten($background, 20%);
 }
 
 .fullname {
@@ -70,8 +72,8 @@
 scale trough {
   all: unset;
   background-color: lighten($background, 7.5%);
-  border-radius: 16px;
-  min-height: 28px;
+  border-radius: 20px;
+  min-height: 32px;
   min-width: 240px;
 }
 
@@ -81,7 +83,7 @@ scale trough {
 .bat_bar,
 scale trough highlight {
   all: unset;
-  border-radius: 16px;
+  border-radius: 20px;
 }
 
 .cpu_bar scale trough highlight {
@@ -150,7 +152,8 @@ scale trough highlight {
   min-height: 240px;
   min-width: 240px;
   margin: 20px;
-  border-radius: 14px;
+  border-radius: 20px;
+  border: 3px solid lighten($background, 15%);
 }
 
 .song {
@@ -191,13 +194,13 @@ scale trough highlight {
 .music_bar scale trough highlight {
   all: unset;
   background-color: $color13;
-  border-radius: 8px;
+  border-radius: 12px;
 }
 .music_bar scale trough {
   all: unset;
   background-color: lighten($background, 7.5%);
-  border-radius: 8px;
-  min-height: 20px;
+  border-radius: 12px;
+  min-height: 24px;
   min-width: 310px;
   margin: 10px 0px 0px 0px;
 }
@@ -243,21 +246,25 @@ scale trough highlight {
 
 .github {
   background-color: #24292e;
-  border-radius: 16px;
+  border-radius: 20px;
+  padding: 8px;
 }
 .youtube {
   background-color: #df584e;
-  border-radius: 16px;
+  border-radius: 20px;
+  padding: 8px;
 }
 .mail {
   background-color: $color15;
-  border-radius: 16px;
+  border-radius: 20px;
+  padding: 8px;
 }
 
 .mailbox {
   background-color: $color15;
-  border-radius: 10px;
+  border-radius: 16px;
   margin: 48px 0px 48px 0px;
+  padding: 12px;
 }
 .label_mails {
   color: $color8;
@@ -295,8 +302,9 @@ scale trough highlight {
 /** Home folders ***************************************/
 .hddbox {
   background-color: lighten($background, 7.5%);
-  border-radius: 10px;
+  border-radius: 16px;
   margin: 15px 15px 10px 15px;
+  padding: 8px;
 }
 .hddicon {
   color: #81a1c1;
