Optimized hyprland config

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-hyprland.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-hyprland.sh.tmpl
@@ -48,6 +48,7 @@ yay -S --noconfirm --needed rofi-lbonn-wayland-git || \
 
 # Additional utilities
 yay -S --noconfirm --needed \
+  dex \
   brightnessctl \
   hyprpicker \
   wlogout
