Refactor lockscreen management and update documentation
- Replaced references to betterlockscreen with dots-lockscreen throughout the documentation and scripts.
- Added a new Lockscreen.md file detailing the usage of dots-lockscreen with swaylock-effects.
- Updated EWW widgets and powermenu configurations to use dots-lockscreen for locking the screen.
- Removed obsolete scripts related to hyprlock and betterlockscreen.
- Enhanced the wal-reload functionality to support automatic updates for the new lockscreen system.
- Updated the dots-scripts registry to include the new lockscreen feature.
- Cleaned up configuration files and removed unused background and config files for the gruvbox-wayland rice theme.

--- a/home/dot_config/eww/dashboard/eww.yuck.tmpl
+++ b/home/dot_config/eww/dashboard/eww.yuck.tmpl
@@ -148,7 +148,7 @@
 ;; power buttons
 (defwidget lock []
   (box :class "genwin" :vexpand "false" :hexpand "false"
-    (button :class "btn_lock" :onclick "~/.config/eww/dashboard/launch.sh; betterlockscreen --lock" "")))
+    (button :class "btn_lock" :onclick "~/.config/eww/dashboard/launch.sh; dots-lockscreen --lock" "")))
 (defwidget logout []
   (box :class "genwin" :vexpand "false" :hexpand "false"
     (button :class "btn_logout" :onclick "~/.config/eww/dashboard/launch.sh; loginctl terminate-session" "󰗽")))
